@@ -1,1 +1,23 @@
 # ECB_CBC_Mode_Encryption
+Implementing a block cipher that encrypts a grayscale image at least 300x300.
+To encrytp odev.png, ECB and CBC block cipher approach is used. 
+
+How to Run?
+-----------
+*Please use the cmd for both compiling or running the program.
+*After opening the cmd please go to the inside of the folder with 'cd' command.
+*Once you are in the folder;
+How to Run?
+-----------
+*Please use the cmd for both compiling or running the program.
+*After opening the cmd please go to the inside of the folder with 'cd' command.
+*Once you are in the folder;
+  -For running jar:        java --enable-preview -jar Main.jar (same as java "java -jar Main.jar")
+  -For compiling the code: javac Main.java
+  -For running the code:   java Main
+
+if you still encounter an issue please use this way:
+javac Main.java
+jar cvf Main.jar *.class
+jar cfe Main.jar Main *.class
+java -jar Main.jar
